# Codeforces

./: .gitignore  1979A.cpp  2007B.cpp  2009E.cpp  2055A.cpp  A GiftFromOrangutan.cpp  AllPairSegments.js  AllPairSegments.rb  AllPairsSegments.cpp  AlternatingSumofNumbers.cpp  AngryMonk1.cpp  ArrangingCats.cpp  ArrayFix.cpp  B.cpp  BalancedTeam.cpp  BasilGarden.cpp  BattleForSurvival.cpp  BeautifulArray.cpp  BestPrice.cpp  BewitchingStargazer.cpp  BinaryCut.cpp  BinomialCoefficients.cpp  BitwiseBalancing.cpp  BlackCircles.cpp  BollingBall.cpp  BossThirsty.cpp  BreachofFaith.cpp  BrightnessBegins.cpp  BrogrammingContest.cpp  BustoPénjamo.cpp  CMakeLists.txt  CaesarCipher.cpp  CardPartition.cpp  CirnoandOperations.cpp  Clockwork.cpp  ClosestPoint.cpp  ComputingMachine.cpp  ConnectheDots.cpp  ConnecttheDots.cpp  ContestProposal.java  (+142 more)
.cph/: .2007B.cpp_cb190a72cfa4541d4bbbb7b63887ca90.prob  .2009E.cpp_5d5652e96b2ff9bf77ebb8f8d4970a75.prob  .2055A.cpp_a997e6d3152aef992a14f9015a90f186.prob  .A GiftFromOrangutan.cpp_189d5fe3710394378770ce5d0a08dc3b.prob  .AllPairSegments.js_c75b45aeeb65ddf8d146c900382f5a9f.prob  .AllPairSegments.rb_89e7a56a2f08cc4a2a5224cfc6594b07.prob  .AlternatingSumofNumbers.cpp_966f2e6c33ab9dddfb31d61fe187bd7e.prob  .ArrayFix.cpp_2aa231fe94462b70b234b3adfde3617e.prob  .B.cpp_b3048c77d2280548935ba2eec99aee36.prob  .BalancedTeam.cpp_81f4bfedf934f2bcd9ab15b2f5f84285.prob  .BasilGarden.cpp_fa5f539f21db1ab605cce93c54e4c9ab.prob  .BeautifulArray.cpp_a586208b721684e4582e7286edbffa17.prob  .BegginerCyper.cpp_eb4cedaae7f3b63c857f4ac93f874bb8.prob  (+149 more)
