cmake_minimum_required(VERSION 3.29)
project(CodeForces)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(CodeForces
    AngryMonk1.cpp
    ArrangingCats.cpp
    CaesarCipher.cpp
    DiverseGame.cpp
    DoraandC++.cpp
    GamewithDoors.cpp
    HackingCypher.cpp
    IlyaandBankAccount.cpp
    MagicianandPigsEasyVersion.cpp
    NotaNimProblem.cpp
    output.txt
    Pattern.py
    ProblemGenerator.cpp
    SofiaandtheLostOperationsA.cpp
    Squaring.cpp
    SubmissionBait.cpp
    tempCodeRunnerFile.cpp
    Test.cpp
    test.py
    TrainandQueries.cpp
    UniformString.cpp
    watermelon.cpp
        SplittingItems.cpp)

add_executable(DoraandC++ DoraandC++.cpp)
add_executable(DoraandC++ DoraandC++.cpp)